form_src += files([
    'argument.c', 'checkpoint.c', 'comexpr.c', 'compcomm.c', 'compiler.c', 'compress.c', 'comtool.c',
    'diagrams.c', 'dict.c', 'dollar.c', 'execute.c', 'extcmd.c', 'factor.c', 'findpat.c', 'function.c',
    'gentopo.cc', 'if.c', 'index.c', 'lus.c', 'message.c', 'minos.c', 'module.c', 'names.c', 'normal.c',
    'notation.c', 'opera.c', 'optimize.cc', 'pattern.c', 'poly.cc', 'polyfact.cc', 'polygcd.cc',
    'polywrap.cc', 'pre.c', 'proces.c', 'ratio.c', 'reken.c', 'reshuf.c', 'sch.c', 'setfile.c', 'smart.c',
    'sort.c', 'spectator.c', 'startup.c', 'store.c', 'symmetr.c', 'tables.c', 'token.c', 'tools.c',
    'topowrap.cc', 'transform.c', 'wildcard.c', 'mytime.cc', 'unixfile.c'
])

tform_src += files([
    'threads.c'
])

configure_file(input: 'version.h.in', output: 'version.h', copy: true)